--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
         "axios": "^0.27.2",
+        "eslint-plugin-prettier": "^4.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.4.0",
@@ -30,7 +31,7 @@
         "eject": "react-scripts eject",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
-        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+        "format": "prettier --write src//**/*.{ts,tsx,json} --config ./.prettierrc"
     },
     "eslintConfig": {
         "extends": [
@@ -54,6 +55,7 @@
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.2.3",
